Adding panama support for halfbyte