@@ -36,10 +36,13 @@ public class VectorUtilBenchmark {
 
   private byte[] bytesA;
   private byte[] bytesB;
+  private byte[] halfBytesA;
+  private byte[] halfBytesB;
   private float[] floatsA;
   private float[] floatsB;
+  private int expectedDotProduct;
 
-  @Param({"1", "128", "207", "256", "300", "512", "702", "1024"})
+  @Param({"1024"})
   int size;
 
   @Setup(Level.Iteration)
@@ -51,6 +54,16 @@ public class VectorUtilBenchmark {
     bytesB = new byte[size];
     random.nextBytes(bytesA);
     random.nextBytes(bytesB);
+    // random half byte arrays for binary methods
+    // this means that all values must be between 0 and 15
+    halfBytesA = new byte[size];
+    halfBytesB = new byte[size];
+    expectedDotProduct = 0;
+    for (int i = 0; i < size; ++i) {
+      halfBytesA[i] = (byte) random.nextInt(16);
+      halfBytesB[i] = (byte) random.nextInt(16);
+      expectedDotProduct += halfBytesA[i] * halfBytesB[i];
+    }
 
     // random float arrays for float methods
     floatsA = new float[size];
@@ -92,6 +105,21 @@ public class VectorUtilBenchmark {
   @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
   public int binarySquareVector() {
     return VectorUtil.squareDistance(bytesA, bytesB);
+  }
+
+  @Benchmark
+  public int binaryHalfByteScalar() {
+    return VectorUtil.int4DotProduct(halfBytesA, halfBytesB);
+  }
+
+  @Benchmark
+  @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public int binaryHalfByteVector() {
+    int result = VectorUtil.int4DotProduct(halfBytesA, halfBytesB);
+    if (result != expectedDotProduct) {
+      throw new IllegalStateException("Expected " + expectedDotProduct + " but got " + result);
+    }
+    return result;
   }
 
   @Benchmark
